--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,19 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
+#development:
+#  <<: *default
+#  database: db/development.sqlite3
+
 development:
   <<: *default
-  database: db/development.sqlite3
+  host: localhost
+  username: hyshka
+  database: beatlib-dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
