update rails and gems, add welcome page, loop mp3 samples

--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,7 @@ development:
   <<: *default
   host: localhost
   username: hyshka
+  password: N00bz0r3
   database: beatlib-dev
 
 # Warning: The database defined as "test" will be erased and
