Update ruby, new welcome page and get started guide

--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,7 @@ default: &default
 development:
   <<: *default
   host: localhost
-  username: hyshka
+  username: postgres
   password: N00bz0r3
   database: beatlib-dev
 
